syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "MiraNexus.Contracts.Protos";

package products;

// REQUESTS
message ProductRequestById {
    string id = 1;
}

message ProductListRequest {
    string tenantId = 1;
}

message ProductCreateRequest {
    string tenantId = 2;
    string categoryId = 3;
    string name = 4;
    string description = 5;
    float price = 6;
    optional string ref = 7;
}

message ProductUpdateRequest {
    string id = 1;
    string tenantId = 2;
    string categoryId = 3;
    string name = 4;
    string description = 5;
    float price = 6;
    bool isActive = 7;
    optional string ref = 8;
}

message ProductDeleteRequest {
    string id = 1;
}

// RESPONSES
message ProductResponse {
    string id = 1;
    string tenantId = 2;
    string categoryId = 3;
    string name = 4;
    string description = 5;
    float price = 6;
    bool isActive = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
    optional string ref = 10;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message ProductDeleteResponse {}


// SERVICES
service ProductService {
    rpc GetById (ProductRequestById) returns (ProductResponse);
    rpc GetAll (ProductListRequest) returns (ProductListResponse);
    rpc Create (ProductCreateRequest) returns (ProductResponse);
    rpc Update (ProductUpdateRequest) returns (ProductResponse);
    rpc Delete (ProductDeleteRequest) returns (ProductDeleteResponse);
}
